# video_metadata

./: .gitignore  .pre-commit-config.yaml  README.md  generate_codec_info  generate_codec_info_all  generate_date_filename_all  install.sh  install_scripts.sh  install_test_footage.sh.template  pyproject.toml  quicktime_set_codec_info_all  release.sh  release_version.sh  template-install_test_footage  template-install_test_footage.sh  video_cleanup_metadata  video_date_util  video_generate_codec_info  video_generate_codec_info_bash  video_generate_date_filename  video_generate_date_filename_bash  video_generate_metadata  video_generate_metadata_bash  video_generate_metadata_template  video_set_codec_info  video_set_codec_info_bash  video_set_metadata  video_set_metadata_bash  video_slibrary_metadata_utils.py  video_slibrary_print_utils.py
mp4/: template-install_test_footage.sh
mts/: install_scripts.sh  mts_generate_date_filename_all  template-install_test_footage.sh
quicktime/: README.md  install.sh  install_scripts.sh  meta_data.sh  quicktime_generate_codec_info  quicktime_generate_codec_info_all  quicktime_generate_date_filename_all  quicktime_generate_ffprope_comments  quicktime_generate_metadata  quicktime_generate_metadata_all  quicktime_set_codec_info  quicktime_set_metadata  quicktime_set_metadata_all  template-install_test_footage.sh
video_metadata/: __main__.py  video_cleanup_metadata  video_cleanup_metadata.py  video_date_util.py  video_generate_metadata  video_generate_metadata.py  video_set_metadata  video_set_metadata.py
(+3 files in other folders)
