[project]
name = "video-metadata"
version = "1.1.0"
description = "Toolsuite to handle Video Metadata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
video_metadata = "video_metadata.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_metadata"]

[tool.hatch.build.targets.sdist]
packages = ["video_metadata"]
exclude = [
  "/.gitignore",
  "./release.sh",
  "./install_test_footage.sh",
  "./install_test_footage.sh.template"
]